--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,5 @@ spring.servlet.multipart.max-file-size=10MB
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Redact custom
-#redact.jwt-secret=8y/B?E(H+MbQeThWmYq3t6w9z$C&F)J@NcRfUjXn2r4u7x!A%D*G-KaPdSgVkYp3
+redact.jwt-secret=8y/B?E(H+MbQeThWmYq3t6w9z$C&F)J@NcRfUjXn2r4u7x!A%D*G-KaPdSgVkYp3
 
