--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,4 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Redact custom
 redact.jwt-secret=8y/B?E(H+MbQeThWmYq3t6w9z$C&F)J@NcRfUjXn2r4u7x!A%D*G-KaPdSgVkYp3
+redact.articles-dir=./articles/
