--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,10 @@ cache:
 script:
   - ./gradlew check
   
+# Deploy master
+deploy:
+  provider: script
+  script: scripts/deploy.sh
+  skip_cleanup: true
+  on:
+    branch: master
