added editions and archives API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,4 @@ logging.file.name=./log/redact.log
 # Redact custom
 redact.jwt-secret=8y/B?E(H+MbQeThWmYq3t6w9z$C&F)J@NcRfUjXn2r4u7x!A%D*G-KaPdSgVkYp3
 redact.articles-dir=./articles
+redact.archives-dir=./archives
