--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
 plugins {
     id 'java'
     id 'eclipse'
-    id 'org.springframework.boot' version '2.2.1.RELEASE'
+    id 'idea'
+    id 'org.springframework.boot' version '2.2.2.RELEASE'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'com.webcohesion.enunciate' version '2.12.1'
 }
 
 group = 'cz.falcon9.redact'
-version = '1.1.0-SNAPSHOT'
+version = '1.2.0-SNAPSHOT'
 sourceCompatibility = '1.8'
 description = 'System for managing the workflow of Logos Polytechnikos. Built for school course "RSP"'
 
@@ -39,7 +40,7 @@ dependencies {
     runtimeOnly 'mysql:mysql-connector-java'
     
     // Flyway
-    implementation 'org.flywaydb:flyway-core:6.0.7'
+    implementation 'org.flywaydb:flyway-core:6.1.3'
     
     // JWT
     implementation 'io.jsonwebtoken:jjwt-api:0.10.7'
